Mensaje de commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.1.2/css/all.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;600;700&display=swap"
@@ -17,33 +17,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
   </head>
-  <body>
+  <body >
+
     <div class="container">
+
       <div class="card">
-        <h1>Hello, I am david</h1>
-        <img class="img" src="images/me.jpg" height="60px" alt="img-profile" />
-        <p>
-          I love Github, UX/UI Design, web-development and motorbikes 🏍️. I
-          launched Le Wagon to teach code to entrepreneurs and creative people
-          around the world 🌍.
-        </p>
-        <a href="#" class="btn-blue">Discover Le Wagon</a>
+        <div class="izquiera">
+          <nav class="navegacion">
+            <img src="images/logo.jpg" alt="" class=" img-1">
+            <a href class="button-nav"="nosotros.html">Nosotros</a>
+             <a href class="button-nav"="anuncios.html">Anuncssssssssio</a>
+            <a href class="button-nav"="blog.html">Blog</a>
+            <a href class="button-nav" ="contacto.html">Contactoooo</a>
+            <a href  class="button-nav" ="anuncio.html">solo anuncio</a>
+
+
+
+          </nav>
+          <p class="small">   < p><   </p>
+
+          <p class="small">   < body ><   </p>
+          <p class="small">   < body ><   </p>
+          <footer class="footer" >
+            <h3 class="grenn">Follow me</h3>
+            <ul>
+              <li class="list-inline">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline">
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline">
+                <a href="#">
+                  <i class="fab fa-twitter  kit"></i>
+                </a>
+              </li>
+            </ul>
+          </footer>
+        </div><!--del card-->
+
+        <div class="contenido  alinear-derecha" >
+          <p class="small">   < html ><  </p>
+          <p class="small">   < body ><   </p>
+
+          <h1>  HI <br> I'M David,</h1>
+          <p class="small">   < p><   </p>
+          <p class="front">Front END Developer ........</p>
+          <p class="small">                < p ><   </p>
+            <br>
+          <a class="button" href="contacto.html">Contact Mee</a>
+
+          <p class="small">   < p><   </p>
+          <p class="small">   < p><   </p>
+
+        </div>
+
+        <div>
+          <p class="top-bottom">  < div > </p>
+          <p class="top-bottom">     < p>  </p>
+          <p class="top-bottom">     < p>  </p>
+          <p class="top-bottom">     < p>  </p>
+        </div>
+
+        </div>
+
       </div>
 
-      <footer class="card">
-        <h3 class="grenn">Follow me</h3>
-        <ul>
-          <li class="list-inline">
-            <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
-          </li>
-          <li class="list-inline">
-            <a href="#"> <i class="fab fa-linkedin-in"></i> Linkedin </a>
-          </li>
-          <li class="list-inline">
-            <a href="#"> <i class="fab fa-twitter kit"></i> Twitter </a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+
+
+    </div><!-- This is the en of the container -->
+
+    <script src="app.js"></script>
   </body>
+
+   <script src="app.js"></script>
 </html>
