pushing updates to profile page

--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@
           <nav class="navegacion">
             <img src="images/logo.jpg" alt="" class=" img-1">
             <a href class="button-nav"="nosotros.html">Nosotros</a>
-             <a href class="button-nav"="anuncios.html">Anuncssssssssio</a>
+             <a href class="button-nav"="anuncios.html">Anucio</a>
             <a href class="button-nav"="blog.html">Blog</a>
             <a href class="button-nav" ="contacto.html">Contactoooo</a>
             <a href  class="button-nav" ="anuncio.html">solo anuncio</a>
-
-
-
           </nav>
           <p class="small">   < p><   </p>
 
