--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p class="small">   < html ><  </p>
           <p class="small">   < body ><   </p>
 
-          <h1>  HI <br> I'M David,</h1>
+          <h1>  HI <br> I'M David, this is my code</h1>
           <p class="small">   < p><   </p>
           <p class="front">Front END Developer ........</p>
           <p class="small">                < p ><   </p>
