--- a/contacto.html
+++ b/contacto.html
@@ -21,30 +21,30 @@
     <div class="container">
       <div class="card-contacto">
         <nav class="navegacion-f">
-          <a href class="button-nav-f" ="nosotros.html">Nosotros</a>
-          <a href class="button-nav-f" ="anuncios.html">Anucio</a>
+
+          <a href class="button-nav-f " ="anuncios.html">Anucio</a>
           <a href class="button-nav-f" ="blog.html">Blog</a>
-          <a href class="button-nav-f" ="contacto.html">Contactoooo</a>
+          <a href class="button-nav-f bd-color" ="contacto.html">Contactoooo</a>
           <a href class="button-nav-f" ="anuncio.html">solo anuncio</a>
         </nav>
 
         <form class="fm formulario" action="">
           <fieldset>
-            <legend>Informacion personal</legend>
+            <legend>Personal Information</legend>
 
-            <label for="nombre">nombre</label>
-            <input type="text" placeholder="Tu nombre" id="nombre" />
+            <label for="nombre">name</label>
+            <input type="text" placeholder="Your name" id="nombre" />
 
             <label for="email">E-mail</label>
             <input type="email" placeholder="Tu email" id="email" />
 
             <label for="tlf">Telefono</label>
-            <input type="tel" placeholder="Tu telefono" id="tlf" />
+            <input type="tel" placeholder="You telefono" id="tlf" />
           </fieldset>
 
           <fieldset>
-            <legend>Contacto</legend>
-            <p>Como desea ser contactado</p>
+            <legend>Contact</legend>
+            <p>How would you like to be contacted?</p>
             <div class="forma-contacto">
               <label for="contactat-telefono">Telefono</label>
               <input
@@ -63,7 +63,7 @@
               />
             </div>
 
-            <p>Si eligio telefono, elija fecha i hora para ser contactado</p>
+            <p>If you chose phone, select a date and time to be contacted</p>
 
             <label for="fecha">Fecha</label>
             <input type="date" id="fecha" />
