--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
       <div class="card">
         <div class="izquiera">
           <nav class="navegacion">
-            <img src="images/logo.jpg" alt="" class=" img-1">
-            <a href class="button-nav"="nosotros.html">Nosotros</a>
+            <a href="index.html">
+              <img  src="images/logo.jpg" alt="" class=" img-1">
+            </a>
+            <a href class="button-nav"="nosotros.html">More About Me</a>
              <a href class="button-nav"="anuncios.html">Anucio</a>
             <a href class="button-nav"="blog.html">Blog</a>
-            <a href class="button-nav" ="contacto.html">Contactoooo</a>
+            <a href="contacto.html" class="button-nav" ="contacto.html">Contact</a>
             <a href  class="button-nav" ="anuncio.html">solo anuncio</a>
           </nav>
-          <p class="small">   < p><   </p>
+          <p class="small">   < p><  < ul>   </p>
 
           <p class="small">   < body ><   </p>
           <p class="small">   < body ><   </p>
@@ -61,7 +63,7 @@
           <p class="small">   < html ><  </p>
           <p class="small">   < body ><   </p>
 
-          <h1>  HI <br> I'M David, updatedddd</h1>
+          <h1>  HI <br> I'M David,</h1>
           <p class="small">   < p><   </p>
           <p class="front">Front END Developer ........</p>
           <p class="small">                < p ><   </p>
